fixed overflow on text description

--- a/src/app/data/about/about.component.scss
+++ b/src/app/data/about/about.component.scss
@@ -128,6 +128,7 @@ $text:white;
             }
             .text-intro{
                 max-width: 98%;
+                overflow: hidden;
             }
         }
     }
